@@ -2,9 +2,10 @@ package com.jonassavas.spring_task_api.controllers;
 
 import org.springframework.web.bind.annotation.RestController;
 
-import com.jonassavas.spring_task_api.domain.dto.CreateTaskGroupDto;
+import com.jonassavas.spring_task_api.domain.dto.TaskGroupRequestDto;
 import com.jonassavas.spring_task_api.domain.dto.TaskDto;
 import com.jonassavas.spring_task_api.domain.dto.TaskGroupDto;
+import com.jonassavas.spring_task_api.domain.dto.TaskGroupWithTasksDto;
 import com.jonassavas.spring_task_api.domain.entities.TaskEntity;
 import com.jonassavas.spring_task_api.domain.entities.TaskGroupEntity;
 import com.jonassavas.spring_task_api.mappers.Mapper;
@@ -16,38 +17,88 @@ import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 
 
 @RestController
 public class TaskGroupController {
     private TaskGroupService taskGroupService;
 
-    private Mapper<TaskGroupEntity, CreateTaskGroupDto> createTaskGroupMapper;
+    private Mapper<TaskGroupEntity, TaskGroupRequestDto> taskGroupRequestMapper;
+    private Mapper<TaskGroupEntity, TaskGroupWithTasksDto> taskGroupWithTasksMapper;
     private Mapper<TaskGroupEntity, TaskGroupDto> taskGroupMapper;
 
     public TaskGroupController(TaskGroupService taskGroupService, 
-                                Mapper<TaskGroupEntity, CreateTaskGroupDto> createTaskGroupMapper,
-                                Mapper<TaskGroupEntity, TaskGroupDto> taskGroupMapper){
+                                Mapper<TaskGroupEntity, TaskGroupRequestDto> taskGroupRequestMapper,
+                                Mapper<TaskGroupEntity, TaskGroupDto> taskGroupMapper,
+                                Mapper<TaskGroupEntity, TaskGroupWithTasksDto> taskGroupWithTasksMapper){
         this.taskGroupService = taskGroupService;
-        this.createTaskGroupMapper = createTaskGroupMapper;
+        this.taskGroupRequestMapper = taskGroupRequestMapper;
         this.taskGroupMapper = taskGroupMapper;
+        this.taskGroupWithTasksMapper = taskGroupWithTasksMapper;
     }
 
     @PostMapping(path = "/taskgroups")
-    public ResponseEntity<CreateTaskGroupDto> createTaskGroup(@RequestBody CreateTaskGroupDto taskGroup) {
-        TaskGroupEntity taskGroupEntity = createTaskGroupMapper.mapFrom(taskGroup);
+    public ResponseEntity<TaskGroupRequestDto> createTaskGroup(@RequestBody TaskGroupRequestDto taskGroup) {
+        TaskGroupEntity taskGroupEntity = taskGroupRequestMapper.mapFrom(taskGroup);
         TaskGroupEntity savedTaskGroupEntity = taskGroupService.save(taskGroupEntity);
-        return new ResponseEntity<>(createTaskGroupMapper.mapTo(savedTaskGroupEntity), HttpStatus.CREATED);
+        return new ResponseEntity<>(taskGroupRequestMapper.mapTo(savedTaskGroupEntity), HttpStatus.CREATED);
     }
 
-    @GetMapping(path = "/taskgroups")
+    @GetMapping("/taskgroups")
     public List<TaskGroupDto> listTaskGroups() {
-        List<TaskGroupEntity> taskGroups = taskGroupService.findAll();
-        return taskGroups.stream().map(taskGroupMapper::mapTo).collect(Collectors.toList());
+        return taskGroupService.findAll()
+            .stream()
+            .map(taskGroupMapper::mapTo)
+            .toList();
+    }
+
+    // @GetMapping("/taskgroups/{id}/tasks")
+    // public List<TaskDto> listTasksForGroup(@PathVariable Long id) {
+    //     return taskService.findByGroupId(id)
+    //         .stream()
+    //         .map(taskMapper::mapTo)
+    //         .toList();
+    // }
+
+    @GetMapping("/taskgroups/with-tasks")
+        public List<TaskGroupWithTasksDto> listTaskGroupsWithTasks() {
+            return taskGroupService.findAllWithTasks()
+                .stream()
+                .map(taskGroupWithTasksMapper::mapTo)
+                .toList();
+    }
+
+
+
+    // @GetMapping(path = "/taskgroups")
+    // public List<TaskGroupDto> listTaskGroups() {
+    //     List<TaskGroupEntity> taskGroups = taskGroupService.findAll();
+    //     return taskGroups.stream().map(taskGroupMapper::mapTo).collect(Collectors.toList());
+    // }
+
+    @DeleteMapping(path = "/taskgroups/{id}")
+    public ResponseEntity deleteTaskGroup(@PathVariable("id") Long id){
+        taskGroupService.delete(id);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
+
+    @DeleteMapping(path = "/taskgroups/{groupId}/tasks")
+    public ResponseEntity deleteAllTasks(@PathVariable("groupId") Long groupId){
+        taskGroupService.deleteAllTasks(groupId);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
+
+    @PatchMapping(path = "/taskgroups/{id}")
+    public ResponseEntity<TaskGroupRequestDto> updateTaskGroup(@PathVariable Long id, @RequestBody TaskGroupRequestDto dto){
+        TaskGroupEntity updated = taskGroupService.update(id, dto);
+        return new ResponseEntity<>(taskGroupRequestMapper.mapTo(updated), HttpStatus.OK);
     }
 
 }
